# CUDA_CNN

./: CMakeLists.txt  README.md
Src/: CMakeLists.txt
Src/cnn/: CMakeLists.txt  cnn.cu  cnn.h  dogBreedClassifier.cu  preprocessor.cu  preprocessor.h
Src/unit_test/: CMakeLists.txt  test_main.cu
cmake/: FindMATLAB.cmake
datasets/: test_labels.txt  test_list.txt  train_labels.txt  train_list.txt
